--- a/docs/docs/cmd/spo/contenttype/contenttype-field-list.mdx
+++ b/docs/docs/cmd/spo/contenttype/contenttype-field-list.mdx
@@ -16,22 +16,22 @@ m365 spo contenttype field list [options]
 
 ```md definition-list
 `-u, --webUrl <webUrl>`
-: URL of the SharePoint site.
+: Absolute URL of the site where the content type is located.  
 
-`-i, --contentTypeId`
-: The ID of the Content Type to list fields for. Specify either `contentTypeId` or `contentTypeName`.
+`-i, --contentTypeId [contentTypeId]`  
+: The ID of the content type for which to list fields. Specify either `contentTypeId` or `contentTypeName`.  
 
-`-n, --contentTypeName`
-: The name of the Content Type to list fields for. Specify either `contentTypeId` or `contentTypeName`.
+`-n, --contentTypeName [contentTypeName]`  
+: The name of the content type for which to list fields. Specify either `contentTypeId` or `contentTypeName`.  
 
 `-l, --listTitle [listTitle]`
 : Optional title of the list where the content type is located. Specify either `listTitle`, `listId` or `listUrl`.
 
 `--listId [listId]`
-: Optional ID of the list where the fields are located. Specify either `listTitle`, `listId` or `listUrl`.
+: Optional ID of the list where the content type is located. Specify either `listTitle`, `listId` or `listUrl`.
 
 `--listUrl [listUrl]`
-: Optional Server- or web-relative URL of the list where the fields are located. Specify either `listTitle`, `listId` or `listUrl`.
+: Optional server- or web-relative URL of the list where the content type is located. Specify either `listTitle`, `listId` or `listUrl`.  
 
 `-p, --properties [properties]`
 : Comma-separated list of properties to retrieve. Will retrieve all properties if not specified.
@@ -41,13 +41,13 @@ m365 spo contenttype field list [options]
 
 ## Examples
 
-Retrieves columns for the specified site content type.
+Retrieves fields for the specified site content type.  
 
 ```sh
 m365 spo contenttype field list --webUrl https://contoso.sharepoint.com/sites/contoso-sales --contentTypeId "0x01"
 ```
 
-Retrieves columns for the specified list content type in the Documents library.
+Retrieves fields for the specified list content type in the Documents library.  
 
 ```sh
 m365 spo contenttype field list --webUrl https://contoso.sharepoint.com/sites/contoso-sales --contentTypeName "Document" --listTitle "Documents"
@@ -109,9 +109,9 @@ m365 spo contenttype field list --webUrl https://contoso.sharepoint.com/sites/co
   <TabItem value="Text">
 
   ```text
-  AutoIndexed  CanBeDeleted  ClientSideComponentId                 ClientSideComponentProperties  ClientValidationFormula  ClientValidationMessage  CustomFormatter  DefaultFormula  DefaultValue  Description  Direction  EnforceUniqueValues  EntityPropertyName  Filterable  FromBaseType  Group    Hidden  Id                                    Indexed  IndexStatus  InternalName  IsModern  JSLink              PinnedToFiltersPane  ReadOnlyField  Required  SchemaXml                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                Scope  Sealed  ShowInFiltersPane  Sortable  StaticName   Title         FieldTypeKind  TypeAsString  TypeDisplayName      TypeShortDescription  ValidationFormula  ValidationMessage  EnableLookup  MaxLength
-  -----------  ------------  ------------------------------------  -----------------------------  -----------------------  -----------------------  ---------------  --------------  ------------  -----------  ---------  -------------------  ------------------  ----------  ------------  -------  ------  ------------------------------------  -------  -----------  ------------  --------  ------------------  -------------------  -------------  --------  -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -----  ------  -----------------  --------  -----------  ------------  -------------  ------------  -------------------  --------------------  -----------------  -----------------  ------------  ---------
-  false        false         00000000-0000-0000-0000-000000000000  null                           null                     null                     null             null            null                       none       false                ContentType         true        false         _Hidden  false   c042a256-787d-4a6f-8a8a-cf6ab767f12d  false    0            ContentType   false     null                false                false          false     <Field ID="{c042a256-787d-4a6f-8a8a-cf6ab767f12d}" Name="ContentType" SourceID="http://schemas.microsoft.com/sharepoint/v3" StaticName="ContentType" Group="_Hidden" Type="Computed" DisplayName="Content Type" Sealed="TRUE" Sortable="FALSE" RenderXMLUsingPattern="TRUE" PITarget="MicrosoftWindowsSharePointServices" PIAttribute="ContentTypeID" DelayActivateTemplateBinding="GROUP,SPSPERS,SITEPAGEPUBLISHING" Customization=""><FieldRefs><FieldRef ID="{03e45e84-1992-4d42-9116-26f756012634}" Name="ContentTypeId" /></FieldRefs><DisplayPattern><MapToContentType><Column Name="ContentTypeId" /></MapToContentType></DisplayPattern></Field> /      true    0                  false     ContentType  Content Type  12             Computed      Computed             Computed              null               null               false         255
+  Id                                    Title   Group    Hidden
+  ------------------------------------  ------  -------  ------
+  5ee2dd25-d941-455a-9bdb-7f2c54aed11b  Title   _Hidden  false
   ```
 
   </TabItem>
