--- a/docs/docs/cmd/entra/m365group/m365group-set.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-set.mdx
@@ -61,7 +61,7 @@ When updating group's owners and members, the command will add newly specified u
 
 When specifying the path to the logo image you can use both relative and absolute paths. Note, that ~ in the path, will not be resolved and will most likely result in an error.
 
-:::warning
+:::note
 
 Options `allowExternalSenders` and `autoSubscribeNewMembers` can only be set using delegated permissions.  
 
