--- a/docs/docs/cmd/entra/enterpriseapp/enterpriseapp-remove.mdx
+++ b/docs/docs/cmd/entra/enterpriseapp/enterpriseapp-remove.mdx
@@ -15,21 +15,20 @@ m365 entra enterpriseapp remove [options]
 ## Alias
 
 ```sh
-m365 aad sp remove [options]
 m365 entra sp remove [options]
 ```
 
 ## Options
 
 ```md definition-list
-`-i, --appId [appId]`
-: ID of the application for which the enterprise application should be deleted.
+`-i, --id [id]`
+: ID of the enterprise application.
 
-`-n, --appDisplayName [appDisplayName]`
-: Display name of the application for which the enterprise application should be deleted.
+`-n, --displayName [displayName]`
+: Display name of the enterprise application.
 
-`--appObjectId [appObjectId]`
-: ObjectId of the application for which the enterprise application should be deleted.
+`--objectId [objectId]`
+: ObjectId of the enterprise application.
 
 `-f, --force`
 : Don't prompt for confirmation.
@@ -37,28 +36,24 @@ m365 entra sp remove [options]
 
 <Global />
 
-## Remarks
-
-Specify either the `appId`, `appObjectId` or `appDisplayName`. If you specify more than one option value, the command will fail with an error.
-
 ## Examples
 
-Delete an enterprise application with appId _b2307a39-e878-458b-bc90-03bc578531d6_.
+Delete an enterprise application by application ID.
 
 ```sh
-m365 entra enterpriseapp remove --appId b2307a39-e878-458b-bc90-03bc578531d6 --force
+m365 entra enterpriseapp remove --id b2307a39-e878-458b-bc90-03bc578531d6 --force
 ```
 
-Delete the _Contoso app_ enterprise application.
+Delete an enterprise application by display name.
 
 ```sh
-m365 entra enterpriseapp remove --appDisplayName "Contoso app"
+m365 entra enterpriseapp remove --displayName "Contoso app"
 ```
 
-Delete the enterprise application with ObjectId _b2307a39-e878-458b-bc90-03bc578531dd_.
+Delete an enterprise application by object ID.
 
 ```sh
-m365 entra enterpriseapp remove --appObjectId b2307a39-e878-458b-bc90-03bc578531dd
+m365 entra enterpriseapp remove --objectId b2307a39-e878-458b-bc90-03bc578531dd
 ```
 
 ## Response
@@ -68,4 +63,3 @@ The command won't return a response on success.
 ## More information
 
 - Application and service principal objects in Microsoft Entra ID: [https://learn.microsoft.com/azure/active-directory/develop/active-directory-application-objects](https://learn.microsoft.com/azure/active-directory/develop/active-directory-application-objects)
-- Delete servicePrincipal: [https://learn.microsoft.com/en-us/graph/api/serviceprincipal-delete?view=graph-rest-1.0](https://learn.microsoft.com/en-us/graph/api/serviceprincipal-delete?view=graph-rest-1.0)
