--- a/docs/docs/v10-upgrade-guidance.mdx
+++ b/docs/docs/v10-upgrade-guidance.mdx
@@ -149,13 +149,21 @@ In the past versions of CLI for Microsoft 365, the command had no output. When u
 
 When using the [spo file copy](./cmd/spo/file/file-copy.mdx) command, please use the new command input. This means that you'll have to remove option `--resetAuthorAndCreated` from your scripts and automation tools.
 
-### Removed 'spo folder rename' alias
+### Removed `spo folder rename` alias
 
 The `spo folder rename` command was removed and replaced by the [spo folder set](./cmd/spo/folder/folder-set.mdx) command.
 
 #### What action do I need to take?
 
 Please, update your scripts to use the `spo folder set` command instead of `spo folder rename`.
+
+### Updated output of `spo applicationcustomizer get` command
+
+In the previous version of CLI, the command output had a `Rights` property that was a stringified JSON object. In this release, this has been changed to a JSON object.
+
+#### What action do I need to take?
+
+Please, check the documentation of the [spo applicationcustomizer get](./cmd/spo/applicationcustomizer/applicationcustomizer-get.mdx) command to see the updated output and adjust your scripts accordingly.
 
 ## SharePoint Framework
 
